<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/rl_layout"
        android:paddingBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:background="@mipmap/setting_back"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dddd"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:textSize="18dp"
                    android:textColor="@color/tv_dialog_text"
                    android:text="@string/参与人数" />

                <TextView
                    android:id="@+id/labPeople"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:textSize="18dp"
                    android:text="@string/num4"
                    android:textColor="@color/tv_dialog_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/people_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@mipmap/btn_back"
                    android:text="-"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white" />

                <SeekBar
                    android:id="@+id/seekPeople"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:indeterminateOnly="false"
                    style="@style/aim_seekbar_style"
                    android:minHeight="9dp"
                    android:maxHeight="9dp"
                    android:max="16"
                    android:progress="10"
                    android:layout_gravity="center_vertical"
                    android:secondaryProgress="0"/>

                <Button
                    android:id="@+id/people_add"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@mipmap/btn_back"
                    android:text="+"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/undercover_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textColor="@color/tv_dialog_text"
                    android:text="@string/undercover_num" />

                <TextView
                    android:id="@+id/normal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textColor="@color/tv_dialog_text"
                    android:text="@string/normalnum" />

                <TextView
                    android:id="@+id/tv_setting_help_conflict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/tv_dialog_text"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/blank"
                    android:textSize="18dp" />

                <ToggleButton
                    android:id="@+id/switch_blank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:button="@drawable/btn_toggle_xml"
                    android:checked="true"
                    android:text=""
                    android:textColor="@color/tv_dialog_text"
                    android:textSize="14dp"
                    android:textOff="关闭"
                    android:textOn="打开" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/undercover_num_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18dp"
                    android:textColor="@color/tv_dialog_text"
                    android:text="@string/undercover_num_change" />

                <Button
                    android:id="@+id/undercover_num_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:text="-"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@mipmap/btn_back" />

                <Button
                    android:id="@+id/undercover_num_add"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@mipmap/btn_back" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/dialog_choose_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:src="@mipmap/setting_title" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rl_layout"
        android:text="@string/开始游戏"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_back_xml" />

</RelativeLayout>